2006-09-21  Nikolas Zimmermann  <zimmermann@kde.org>

        Reviewed by eseidel.

        Don't crash if no IconDatabase is available (ie. on Qt/Gdk)

        * page/Frame.cpp:
        (WebCore::Frame::endIfNotLoading):

2006-09-21  Nikolas Zimmermann  <zimmermann@kde.org>

        Reviewed by eseidel.

        Fix Qt/Linux build.

        * CMakeLists.txt:
        * kcanvas/device/qt/KCanvasClipperQt.h:
        * kcanvas/device/qt/KRenderingDeviceQt.cpp:
        * platform/qt/FrameQt.cpp:
        (WebCore::FrameQt::isLoadTypeReload):
        (WebCore::FrameQt::originalRequestURL):
        * platform/qt/FrameQt.h:
        * platform/qt/GraphicsContextQt.cpp:
        (WebCore::GraphicsContext::concatCTM):
        * platform/qt/ScrollViewQt.cpp:
        (WebCore::ScrollView::wheelEvent):
        * platform/qt/TemporaryLinkStubs.cpp:
        (WebCore::IconDatabase::setIconURLForPageURL):

2006-09-20  Justin Garcia  <justin.garcia@apple.com>

        Reviewed by john
        
        <http://bugzilla.opendarwin.org/show_bug.cgi?id=7165>
        TinyMCE: Dragging & dropping content always leaves a copy when editing inside a subframe

        * editing/MoveSelectionCommand.cpp:
        (WebCore::MoveSelectionCommand::MoveSelectionCommand): Set the document
        to the position-to-move-to's document, not the fragment's document.  The 
        fragment's document is the document used to create the fragment and is irrelavant.

2006-09-21  Brady Eidson  <beidson@apple.com>

        Reviewed by Anders

        When your assumption is "IconDatabase::sharedIconDatabase()" will never fail but it does, you're in trouble
        This fixes Spinneret so it won't crash on its first load!

        * page/Frame.cpp:
        (WebCore::Frame::endIfNotLoading):

2006-09-21  Brady Eidson  <beidson@apple.com>

        Build fix

        * platform/win/TemporaryLinkStubs.cpp:
        (ScrollView::wheelEvent):

2006-09-20  Rob Buis  <buis@kde.org>

        Reviewed by eseidel.
